--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -4,20 +4,21 @@
 
 .card {
   border-radius: 20px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   height: 100%;
   background: black;
   color: white;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 .card-body{
   box-sizing: border-box;
   padding: 20px;
+  font-size: 20px;
 }
 
 img {
   width: 100%;
-  height: 150px;
+  height: 300px;
   object-fit: cover;
 
   border-top-left-radius: 20px;
